--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <!-- styles separado por módulos -->
     <link rel="stylesheet" href="./styles/styles.css">
+    <link rel="stylesheet" href="./styles/header.css">
     <!-- #box icon -->
     <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
     <!--remox icon-->
@@ -35,7 +37,7 @@
             </li>
         </ul>
         <div class="top-btnn">
-            <a href="#" class="h-btn">Entre em contato!</a>
+            <a href="#" class="contato">Entre em contato!</a>
         </div>
 
     </header>
