--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <!-- styles separado por módulos -->
     <link rel="stylesheet" href="./styles/styles.css">
     <link rel="stylesheet" href="./styles/header.css">
+    <link rel="stylesheet" href="./styles/hero.css"
     <!-- #box icon -->
     <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
     <!--remox icon-->
@@ -17,7 +18,7 @@
 
 <body>
     <header>
-        <a href="#" class="logo">Desenvolvedor <span>X.</span></a>
+        <a href="#" class="logo">Desenvolvedor <span>Full Stack.</span></a>
         <div class="bx bx-menu" id="menu-icon"></div>
         <ul class="navlist">
             <li>
@@ -41,6 +42,25 @@
         </div>
 
     </header>
+
+    <section class="hero" id="home">
+        <div class="main-content">
+            <h4>Olá!</h4>
+            <h1>Eu sou o <span>Navarro</span></h1>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Porro, nisi laboriosam? At, corporis.
+                Doloremque iste consequatur dolore perspiciatis nobis accusamus minus sequi. Non dolore similique ut ea
+                maxime, illo at.</p>
+                <div class="social">
+                    <a href="#"> <i class="ri-github-fill"></i></a>
+                    <a href="#"> <i class="ri-linkedin-fill"></i></a>
+                </div>
+                <div class="main-btn">
+                    <a href="#" class="btn">Entre em contato!</a>
+                    <a href="#" class="btn btn2 ">Currículo</a>
+                </div>
+        </div>
+
+    </section>
 
 
 
