--- a/index.html
+++ b/index.html
@@ -62,6 +62,34 @@
 
     </section>
 
+    <section class="about" id="about">
+        <div class="about-img">
+            <img src="">
+        </div>
+        <div>
+            <h2>Eu sou Desenvolvedor <span>FullStack</span></h2>
+            <div class="exp-area">
+                <p class="exp">
+                    Experiência
+                    <img alt="magno">
+                    +6 meses como Desenvolvedor <span>FullStack</span>
+                </p>
+                <p class="exp">
+                    +1 ano como <span>Freelancer</span>
+                </p>
+                <p class="exp">
+                    Email:
+                    <span>navarrorangel1@hotmail.com</span>
+                </p>
+                <p class="exp">
+                    Telefone
+                    <span>+55 41 997047530</span>
+                </p>
+            </div>
+            <a href="#" class="btn"> Veja meus projetos!</a>
+        </div>
+    </section>
+
 
 
 
