--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <!-- styles separado por módulos -->
     <link rel="stylesheet" href="./styles/styles.css">
     <link rel="stylesheet" href="./styles/header.css">
-    <link rel="stylesheet" href="./styles/hero.css"
+    <link rel="stylesheet" href="./styles/hero.css">
+    <link rel="stylesheet" href="./styles/about.css">
     <!-- #box icon -->
     <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
     <!--remox icon-->
@@ -64,7 +65,7 @@
 
     <section class="about" id="about">
         <div class="about-img">
-            <img src="">
+            <img src="./images/fotoabout.png">
         </div>
         <div>
             <h2>Eu sou Desenvolvedor <span>FullStack</span></h2>
