adding skills section

--- a/index.html
+++ b/index.html
@@ -51,14 +51,14 @@
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Porro, nisi laboriosam? At, corporis.
                 Doloremque iste consequatur dolore perspiciatis nobis accusamus minus sequi. Non dolore similique ut ea
                 maxime, illo at.</p>
-                <div class="social">
-                    <a href="#"> <i class="ri-github-fill"></i></a>
-                    <a href="#"> <i class="ri-linkedin-fill"></i></a>
-                </div>
-                <div class="main-btn">
-                    <a href="#" class="btn">Entre em contato!</a>
-                    <a href="#" class="btn btn2 ">Currículo</a>
-                </div>
+            <div class="social">
+                <a href="#"> <i class="ri-github-fill"></i></a>
+                <a href="#"> <i class="ri-linkedin-fill"></i></a>
+            </div>
+            <div class="main-btn">
+                <a href="#" class="btn">Entre em contato!</a>
+                <a href="#" class="btn btn2 ">Currículo</a>
+            </div>
         </div>
 
     </section>
@@ -91,6 +91,35 @@
         </div>
     </section>
 
+    <section class="skills">
+        <div class="center-text">
+            <h2>Minhas <span>Habilidades Técnicas</span></h2>
+        </div>
+        <div class="skills-content">
+
+            <div class="box">
+                <img src="./images/angularvermelho.svg">
+                <h3>Desenvolvimento em Angular</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis eum deleniti molestiae non quod
+                    dolores velit amet, neque commodi, ut aspernatur nulla aut accusantium fugiat at dicta, facere
+                    necessitatibus quo?</p>
+            </div>
+            <div class="box">
+                <img src="./images/javavermelho.svg">
+                <h3>Desenvolvimento em Java</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis eum deleniti molestiae non quod
+                    dolores velit amet, neque commodi, ut aspernatur nulla aut accusantium fugiat at dicta, facere
+                    necessitatibus quo?</p>
+            </div>
+            <div class="box">
+                <img src="./images/nodeverde.svg">
+                <h3>Desenvolvimento em NodeJs</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis eum deleniti molestiae non quod
+                    dolores velit amet, neque commodi, ut aspernatur nulla aut accusantium fugiat at dicta, facere
+                    necessitatibus quo?</p>
+            </div>
+        </div>
+    </section>
 
 
 
