finishing skills area

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="./styles/header.css">
     <link rel="stylesheet" href="./styles/hero.css">
     <link rel="stylesheet" href="./styles/about.css">
+    <link rel="stylesheet" href="./styles/skills.css">
     <!-- #box icon -->
     <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
     <!--remox icon-->
@@ -29,7 +30,7 @@
                 <a href="#about">Sobre</a>
             </li>
             <li>
-                <a href="#tecs">Tecnologias</a>
+                <a href="#skills">Skills</a>
             </li>
             <li>
                 <a href="#portfolio">Portfólio</a>
@@ -91,7 +92,7 @@
         </div>
     </section>
 
-    <section class="skills">
+    <section class="skills" id="skills">
         <div class="center-text">
             <h2>Minhas <span>Habilidades Técnicas</span></h2>
         </div>
