--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="./styles/hero.css">
     <link rel="stylesheet" href="./styles/about.css">
     <link rel="stylesheet" href="./styles/skills.css">
+    <link rel="stylesheet" href="./styles/portfolio.css">
     <!-- #box icon -->
     <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
     <!--remox icon-->
@@ -118,6 +119,88 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis eum deleniti molestiae non quod
                     dolores velit amet, neque commodi, ut aspernatur nulla aut accusantium fugiat at dicta, facere
                     necessitatibus quo?</p>
+            </div>
+        </div>
+    </section>
+
+    <section class="portfolio" id="portfolio">
+        <div class="center-text">
+            <h2>Meu <span>Portfólio</span></h2>
+        </div>
+
+        <div class="portfolio-content">
+            <div class="row">
+                <a href="https://navarrorangel.github.io/Furia/" target="_blank"><img src="./images/furia.png"></a>
+                <div class="main-row">
+                    <div class="row-text">
+                        <h5>Landing Page</h5>
+                    </div>
+                    <div class="row-icon">
+                        <a href="https://github.com/NavarroRangel/Furia" target="_blank">
+                            <i class="ri-github-fill"></i>
+                        </a>
+                    </div>
+                </div>
+                <div class="tec-used">
+                    <img src="./images/html5-fill.svg">
+                    <img src="./images/css3-fill.svg">
+                    <img src="./images/javascript-line(1).svg">
+                </div>
+            </div>
+            <div class="row">
+                <a href="https://github.com/NavarroRangel/emailApi" target="_blank"><img
+                        src="./images/api email.png"></a>
+                <div class="main-row">
+                    <div class="row-text">
+                        <h5>Email API</h5>
+                    </div>
+                    <div class="row-icon">
+                        <a href="https://github.com/NavarroRangel/emailApi" target="_blank">
+                            <i class="ri-github-fill"></i>
+                        </a>
+                    </div>
+                </div>
+                <div class="tec-used">
+                    <img src="./images/javascript-line(1).svg">
+                    <img src="./images/64px-NestJS.svg.png">
+                    <img src="./images/nodeverde.svg">
+                </div>
+            </div>
+            <div class="row">
+                <a href="https://github.com/NavarroRangel/Sistema-de-controle-de-estoque-go-utilizando-postgres"
+                    target="_blank"><img src="./images/estoque.png"></a>
+                <div class="main-row">
+                    <div class="row-text">
+                        <h5>Sistema de estoque utilizando GO e docker</h5>
+                    </div>
+                    <div class="row-icon">
+                        <a href="https://github.com/NavarroRangel/Sistema-de-controle-de-estoque-go-utilizando-postgres"
+                            target="_blank">
+                            <i class="ri-github-fill"></i>
+                        </a>
+
+                    </div>
+                </div>
+                <div class="tec-used">
+                    <img src="./images/go-svgrepo-com.svg">
+                    <img src="./images/docker.svg">
+                </div>
+            </div>
+            <div class="row">
+                <a href="" target="_blank"><img src="./images/screnmatch.png"></a>
+                <div class="main-row">
+                    <div class="row-text">
+                        <h5>Sistema de filmes</h5>
+                    </div>
+                    <div class="row-icon">
+                        <a href="https://github.com/NavarroRangel/ScreenMatchSpringSemWeb" _blank">
+                            <i class="ri-github-fill"></i>
+                        </a>
+                    </div>
+                </div>
+                <div class="tec-used">
+                    <img src="./images/javavermelho.svg">
+                </div>
             </div>
         </div>
     </section>
