--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="./styles/about.css">
     <link rel="stylesheet" href="./styles/skills.css">
     <link rel="stylesheet" href="./styles/portfolio.css">
+    <link rel="stylesheet" href="./styles/contato.css">
     <!-- #box icon -->
     <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
     <!--remox icon-->
@@ -202,6 +203,21 @@
                     <img src="./images/javavermelho.svg">
                 </div>
             </div>
+        </div>
+    </section>
+
+    <section class="contact" id="contact">
+        <div class="center-text">
+            <h2>Entre em Contato</h2>
+        </div>
+        <div class="contact-form">
+            <form action="">
+                <input type="text" placeholder="Seu nome" name="nome" required>
+                <input type="email" placeholder="Seu email" name="email" required>
+                <textarea placeholder="Sua Mensagem" name="mensagem" id="" cols="30" rows="10" required></textarea>
+                <button type="submit" value="sendMessage" class="send-btn">Enviar</button>
+
+            </form>
         </div>
     </section>
 
