--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="./styles/skills.css">
     <link rel="stylesheet" href="./styles/portfolio.css">
     <link rel="stylesheet" href="./styles/contato.css">
+    <link rel="stylesheet" href="./styles/footer.css">
     <!-- #box icon -->
     <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
     <!--remox icon-->
@@ -219,6 +220,15 @@
 
             </form>
         </div>
+    </section>
+
+    <section class="footer" id="footer">
+        <div class="copyright">
+            <p>2023 Navarro Rangel, todos os direitos reservados.</p>
+        </div>
+        <a href="#home" class="scroll-top">
+            <i class="ri-arrow-up-s-fill"></i>
+        </a>
     </section>
 
 
