--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel=" icon" href="./images/N.ico" type="image/x-icon">
     <title>Portfólio Navarro</title>
     <!-- styles separado por módulos -->
     <link rel="stylesheet" href="./styles/styles.css">
