--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
 <body>
     <header>
         <a href="#" class="logo">Desenvolvedor <span>Full Stack.</span></a>
-        <div class="bx bx-menu" id="menu-icon"></div>
+        <div class="bx bx-menu" id="menu-icon">
+        </div>
         <ul class="navlist">
             <li>
                 <a href="#">Home</a>
