adicionando responsividade para mobile

--- a/index.html
+++ b/index.html
@@ -78,12 +78,11 @@
             <h2>Eu sou Desenvolvedor <span>FullStack</span></h2>
             <div class="exp-area">
                 <p class="exp">
-                    Experiência
-                    <img alt="magno">
-                    +6 meses como Desenvolvedor <span>FullStack</span>
+                    Experiência:
+                    +6 meses como Desenvolvedor <span>Fullstack</span>
                 </p>
                 <p class="exp">
-                    +1 ano como <span>Freelancer</span>
+                    +1 ano como <span>Webdeveloper</span>
                 </p>
                 <p class="exp">
                     Email:
@@ -227,7 +226,7 @@
 
     <section class="footer" id="footer">
         <div class="copyright">
-            <p>2023 Navarro Rangel, todos os direitos reservados.</p>
+            <p>2025 Navarro Rangel, todos os direitos reservados.</p>
         </div>
         <a href="#home" class="scroll-top">
             <i class="ri-arrow-up-s-fill"></i>
