adicionando novas animações

--- a/index.html
+++ b/index.html
@@ -55,16 +55,17 @@
         <div class="main-content" data-aos="fade-in">
             <h4>Olá!</h4>
             <h1>Eu sou o <span>Navarro</span></h1>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Porro, nisi laboriosam? At, corporis.
-                Doloremque iste consequatur dolore perspiciatis nobis accusamus minus sequi. Non dolore similique ut ea
-                maxime, illo at.</p>
+            <p>tenho 21 anos e estou animado para aprimorar minhas habilidades como desenvolvedor web. Apaixonado por
+                tecnologia e inovação, sou especializado em Angular e NodeJS, com sólida experiência em Java e Git.
+            </p>
             <div class="social">
-                <a href="#"> <i class="ri-github-fill"></i></a>
-                <a href="#"> <i class="ri-linkedin-fill"></i></a>
+                <a href="https://github.com/NavarroRangel" target="_blank"> <i class="ri-github-fill"></i></a>
+                <iframe name="iframe_download" style="display: none;"></iframe>
+                <a href="https://www.linkedin.com/in/navarrorangeldesouza/" target="_blank"> <i class="ri-linkedin-fill"></i></a>
             </div>
             <div class="main-btn">
-                <a href="#" class="btn">Entre em contato!</a>
-                <a href="#" class="btn btn2 ">Currículo</a>
+                <a href="https://wa.me/+5541997047530" class="btn" target="_blank">Entre em contato!</a>
+                <a href="./dowloads/NAVARRO RANGEL CURRICULUM.pdf" target="inframe_dowload" class="btn btn2 " target="_blank">Currículo</a>
             </div>
         </div>
 
@@ -101,9 +102,9 @@
         <div class="center-text" data-aos="flip-up">
             <h2>Minhas <span>Habilidades Técnicas</span></h2>
         </div>
-        <div class="skills-content"data-aos="slide-up">
+        <div class="skills-content" data-aos="slide-up">
 
-            <div class="box" >
+            <div class="box">
                 <img src="./images/angularvermelho.svg">
                 <h3>Desenvolvimento em Angular</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis eum deleniti molestiae non quod
@@ -127,19 +128,19 @@
         </div>
     </section>
 
-    <section class="portfolio" id="portfolio">
+    <section class="portfolio" id="portfolio" data-aos="zoom-in-down">
         <div class="center-text">
             <h2>Meu <span>Portfólio</span></h2>
         </div>
 
         <div class="portfolio-content">
-            <div class="row">
+            <div class="row" data-aos="zoom-in-up">
                 <a href="https://navarrorangel.github.io/Furia/" target="_blank"><img src="./images/furia.png"></a>
                 <div class="main-row">
                     <div class="row-text">
                         <h5>Landing Page</h5>
                     </div>
-                    <div class="row-icon">
+                    <div class="row-icon" >
                         <a href="https://github.com/NavarroRangel/Furia" target="_blank">
                             <i class="ri-github-fill"></i>
                         </a>
@@ -151,7 +152,7 @@
                     <img src="./images/javascript-line(1).svg">
                 </div>
             </div>
-            <div class="row">
+            <div class="row" data-aos="zoom-in-up">
                 <a href="https://github.com/NavarroRangel/emailApi" target="_blank"><img
                         src="./images/api email.png"></a>
                 <div class="main-row">
@@ -170,7 +171,7 @@
                     <img src="./images/nodeverde.svg">
                 </div>
             </div>
-            <div class="row">
+            <div class="row" data-aos="zoom-in-up">
                 <a href="https://github.com/NavarroRangel/Sistema-de-controle-de-estoque-go-utilizando-postgres"
                     target="_blank"><img src="./images/estoque.png"></a>
                 <div class="main-row">
@@ -185,12 +186,12 @@
 
                     </div>
                 </div>
-                <div class="tec-used">
+                <div class="tec-used" >
                     <img src="./images/go-svgrepo-com.svg">
                     <img src="./images/docker.svg">
                 </div>
             </div>
-            <div class="row">
+            <div class="row" data-aos="zoom-in-up">
                 <a href="" target="_blank"><img src="./images/screnmatch.png"></a>
                 <div class="main-row">
                     <div class="row-text">
@@ -209,7 +210,7 @@
         </div>
     </section>
 
-    <section class="contact" id="contact">
+    <section class="contact" id="contact" data-aos="slide-up">
         <div class="center-text">
             <h2>Entre em Contato</h2>
         </div>
@@ -247,7 +248,7 @@
     </script>
     <script src="./script/script.js"></script>
     <script>
-        AOS.init({  
+        AOS.init({
             offset: 300,
             once: true,
             duration: 1000,
