fix: alterando link do about

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                     <span>+55 41 997047530</span>
                 </p>
             </div>
-            <a href="#" class="btn"> Veja meus projetos!</a>
+            <a href="https://github.com/NavarroRangel?tab=repositories" target="_blank" class="btn"> Veja meus projetos!</a>
         </div>
     </section>
 
