atualizando texto experiência

--- a/index.html
+++ b/index.html
@@ -80,10 +80,10 @@
             <div class="exp-area">
                 <p class="exp">
                     Experiência:
-                    +6 meses como Desenvolvedor <span>Fullstack</span>
+                    + de 6 meses como Desenvolvedor <span>Fullstack</span>
                 </p>
                 <p class="exp">
-                    +1 ano como <span>Webdeveloper</span>
+                    + de 1 ano como <span>Webdeveloper</span>
                 </p>
                 <p class="exp">
                     Email:
