alterado texto experiencia

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                     + de 6 meses como Desenvolvedor <span>Fullstack</span>
                 </p>
                 <p class="exp">
-                    + de 1 ano como <span>Webdeveloper</span>
+                    + de 1 ano como <span>Freelancer</span>
                 </p>
                 <p class="exp">
                     Email:
