--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                     necessitatibus quo?</p>
             </div>
             <div class="box">
-                <img src="./images/javavermelho.svg">
+                <img src="./images/angular-svgrepo-com(1).svg">
                 <h3>Desenvolvimento em Java</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis eum deleniti molestiae non quod
                     dolores velit amet, neque commodi, ut aspernatur nulla aut accusantium fugiat at dicta, facere
