icones skills alterados

--- a/index.html
+++ b/index.html
@@ -112,19 +112,20 @@
                     necessitatibus quo?</p>
             </div>
             <div class="box">
-                <img src="./images/angular-svgrepo-com(1).svg">
+                <img src="./images/java-svgrepo-com(3).svg">
                 <h3>Desenvolvimento em Java</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis eum deleniti molestiae non quod
                     dolores velit amet, neque commodi, ut aspernatur nulla aut accusantium fugiat at dicta, facere
                     necessitatibus quo?</p>
             </div>
             <div class="box">
-                <img src="./images/nodeverde.svg">
+                <img src="./images/node-js-svgrepo-com.svg">
                 <h3>Desenvolvimento em NodeJs</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis eum deleniti molestiae non quod
                     dolores velit amet, neque commodi, ut aspernatur nulla aut accusantium fugiat at dicta, facere
                     necessitatibus quo?</p>
             </div>
+            
         </div>
     </section>
 
