adicionado icones de tecs com cores da paleta #7180B9

--- a/index.html
+++ b/index.html
@@ -148,9 +148,9 @@
                     </div>
                 </div>
                 <div class="tec-used">
-                    <img src="./images/html5-fill.svg">
-                    <img src="./images/css3-fill.svg">
-                    <img src="./images/javascript-line(1).svg">
+                    <img title="HTML5" src="./images/html5-01-svgrepo-com(1).svg">
+                    <img  title="CSS3" src="./images/css3-01-svgrepo-com.svg">
+                    <img title="Javascript" src="./images/javascript-155-svgrepo-com.svg">
                 </div>
             </div>
             <div class="row" data-aos="zoom-in-up">
@@ -167,9 +167,8 @@
                     </div>
                 </div>
                 <div class="tec-used">
-                    <img src="./images/javascript-line(1).svg">
-                    <img src="./images/64px-NestJS.svg.png">
-                    <img src="./images/nodeverde.svg">
+                    <img title="NEST.JS" src="./images/nest-controller-js-svgrepo-com(2).svg">
+                    <img  title="NodeJS"  src="./images/node-js-svgrepo-com.svg">
                 </div>
             </div>
             <div class="row" data-aos="zoom-in-up">
@@ -188,8 +187,8 @@
                     </div>
                 </div>
                 <div class="tec-used" >
-                    <img src="./images/go-svgrepo-com.svg">
-                    <img src="./images/docker.svg">
+                    <img title="GO" src="./images/go-svgrepo-com(2).svg">
+                    <img title="Docker" src="./images/docker-svgrepo-com(2).svg">
                 </div>
             </div>
             <div class="row" data-aos="zoom-in-up">
@@ -205,7 +204,7 @@
                     </div>
                 </div>
                 <div class="tec-used">
-                    <img src="./images/javavermelho.svg">
+                    <img src="./images/javacomescrita.svg">
                 </div>
             </div>
         </div>
