adicionado box ao about

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <div class="about-img" data-aos="zoom-in-down">
             <img src="./images/fotoabout.png">
         </div>
-        <div class="about-text" data-aos="zoom-in-up">
+        <div class="about-text box" data-aos="zoom-in-up">
             <h2>Eu sou Desenvolvedor <span>FullStack</span></h2>
             <div class="exp-area">
                 <p class="exp">
