adicionado texto das skils

--- a/index.html
+++ b/index.html
@@ -61,11 +61,13 @@
             <div class="social">
                 <a href="https://github.com/NavarroRangel" target="_blank"> <i class="ri-github-fill"></i></a>
                 <iframe name="iframe_download" style="display: none;"></iframe>
-                <a href="https://www.linkedin.com/in/navarrorangeldesouza/" target="_blank"> <i class="ri-linkedin-fill"></i></a>
+                <a href="https://www.linkedin.com/in/navarrorangeldesouza/" target="_blank"> <i
+                        class="ri-linkedin-fill"></i></a>
             </div>
             <div class="main-btn">
                 <a href="https://wa.me/+5541997047530" class="btn" target="_blank">Entre em contato!</a>
-                <a href="./dowloads/NAVARRO RANGEL CURRICULUM.pdf" target="inframe_dowload" class="btn btn2 " target="_blank">Currículo</a>
+                <a href="./dowloads/NAVARRO RANGEL CURRICULUM.pdf" target="inframe_dowload" class="btn btn2 "
+                    target="_blank">Currículo</a>
             </div>
         </div>
 
@@ -94,7 +96,8 @@
                     <span>+55 41 997047530</span>
                 </p>
             </div>
-            <a href="https://github.com/NavarroRangel?tab=repositories" target="_blank" class="btn"> Veja meus projetos!</a>
+            <a href="https://github.com/NavarroRangel?tab=repositories" target="_blank" class="btn"> Veja meus
+                projetos!</a>
         </div>
     </section>
 
@@ -114,18 +117,18 @@
             <div class="box">
                 <img src="./images/java-svgrepo-com(3).svg">
                 <h3>Desenvolvimento em Java</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis eum deleniti molestiae non quod
-                    dolores velit amet, neque commodi, ut aspernatur nulla aut accusantium fugiat at dicta, facere
-                    necessitatibus quo?</p>
+                <p>Criei um sistema de busca de filmes com Java e a API do OMDb, utilizando Spring Boot no backend. A
+                    aplicação suporta filtros avançados, integração eficiente com a API externa e endpoints otimizados
+                    para consultas seguras e rápidas.</p>
             </div>
             <div class="box">
                 <img src="./images/node-js-svgrepo-com.svg">
                 <h3>Desenvolvimento em NodeJs</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis eum deleniti molestiae non quod
-                    dolores velit amet, neque commodi, ut aspernatur nulla aut accusantium fugiat at dicta, facere
-                    necessitatibus quo?</p>
+                <p>Desenvolvi uma API de disparo de e-mails com NestJS e Node.js, utilizando Bull e Redis para gerenciar
+                    filas e envio assíncrono. A solução oferece alta performance, suporte a grandes volumes e recursos
+                    como templates personalizados e monitoramento.</p>
             </div>
-            
+
         </div>
     </section>
 
@@ -141,7 +144,7 @@
                     <div class="row-text">
                         <h5>Landing Page</h5>
                     </div>
-                    <div class="row-icon" >
+                    <div class="row-icon">
                         <a href="https://github.com/NavarroRangel/Furia" target="_blank">
                             <i class="ri-github-fill"></i>
                         </a>
@@ -149,7 +152,7 @@
                 </div>
                 <div class="tec-used">
                     <img title="HTML5" src="./images/html5-01-svgrepo-com(1).svg">
-                    <img  title="CSS3" src="./images/css3-01-svgrepo-com.svg">
+                    <img title="CSS3" src="./images/css3-01-svgrepo-com.svg">
                     <img title="Javascript" src="./images/javascript-155-svgrepo-com.svg">
                 </div>
             </div>
@@ -168,7 +171,7 @@
                 </div>
                 <div class="tec-used">
                     <img title="NEST.JS" src="./images/nest-controller-js-svgrepo-com(2).svg">
-                    <img  title="NodeJS"  src="./images/node-js-svgrepo-com.svg">
+                    <img title="NodeJS" src="./images/node-js-svgrepo-com.svg">
                 </div>
             </div>
             <div class="row" data-aos="zoom-in-up">
@@ -186,7 +189,7 @@
 
                     </div>
                 </div>
-                <div class="tec-used" >
+                <div class="tec-used">
                     <img title="GO" src="./images/go-svgrepo-com(2).svg">
                     <img title="Docker" src="./images/docker-svgrepo-com(2).svg">
                 </div>
@@ -215,10 +218,11 @@
             <h2>Entre em Contato</h2>
         </div>
         <div class="contact-form">
-            <form id="contact-form"  method="POST">
+            <form id="contact-form" method="POST">
                 <input type="text" placeholder="Seu nome" id="name" required>
                 <input type="email" placeholder="Seu email" id="email" required>
-                <textarea placeholder="Sua Mensagem" id="message" name="message" id="" cols="30" rows="10" required></textarea>
+                <textarea placeholder="Sua Mensagem" id="message" name="message" id="" cols="30" rows="10"
+                    required></textarea>
                 <button type="submit" value="sendMessage" id="send-btn" class="send-btn">Enviar</button>
 
             </form>
@@ -254,7 +258,7 @@
             duration: 1000,
         });
     </script>
-    
+
     <script src="./script/mail.js"></script>
 
 </body>
