corrigindo cor icone nest

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                     </div>
                 </div>
                 <div class="tec-used">
-                    <img title="NEST.JS" src="./images/nest-controller-js-svgrepo-com(2).svg">
+                    <img title="NEST.JS" src="./images/icons8-nestjs.svg">
                     <img title="NodeJS" src="./images/node-js-svgrepo-com.svg">
                 </div>
             </div>
